correction mobile navigation

--- a/source/sass/blocks/fieldset.scss
+++ b/source/sass/blocks/fieldset.scss
@@ -97,7 +97,7 @@
 }
 
 .fieldset__field--emotions {
-  height: 160px;
+  min-height: 160px;
   margin-top: 14px;
   margin-bottom: 43px;
   padding: 14px 21px;
