--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -45,6 +45,10 @@
       background-image: url("../../img/icon/menu.svg");
     }
   }
+
+  .main-nav--js {
+    position: absolute;
+  }
 }
 
 .main-nav__list {
