--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -17,6 +17,13 @@
   }
 }
 
+@media (max-width: $mobile-width) {
+  .page-header__logo--js {
+    display: none;
+  }
+}
+
+
 @media (min-width: $desktop-width) {
   .page-header__logo-img {
     height: 96px;
